fix text overflow styling

--- a/components/TimetableMonth/timetable-month.module.css
+++ b/components/TimetableMonth/timetable-month.module.css
@@ -120,7 +120,8 @@
 }
 
 .event p {
-  word-break: break-all;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .timeContainer {
